--- a/angular/angular.json
+++ b/angular/angular.json
@@ -30,10 +30,15 @@
             ],
             "styles": [
               "./node_modules/@po-ui/style/css/po-theme-default.min.css",
+              "node_modules/bootstrap/dist/css/bootstrap.css",
               "src/styles.scss",
               "src/assets/fonts/fonts.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/jquery/dist/jquery.js",
+              "node_modules/popper.js/dist/umd/popper.js",
+              "node_modules/bootstrap/dist/js/bootstrap.js"
+            ]
           },
           "configurations": {
             "production": {
