--- a/angular/package.json
+++ b/angular/package.json
@@ -20,6 +20,9 @@
     "@angular/router": "^14.0.0",
     "@po-ui/ng-components": "^14.4.0",
     "@po-ui/ng-templates": "^14.4.0",
+    "bootstrap": "^5.2.2",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
